--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                 <div class="phone">
                     <div class="camera"></div>
                     <div class="cap">
-                        <img class="arrow"  src="../images/arrow.png" alt="arrow">
-                        <img class="avatar" src="../images/avatar.jpg" alt="avatar">
+                        <img class="arrow"  src="images/arrow.png" alt="arrow">
+                        <img class="avatar" src="images/avatar.jpg" alt="avatar">
                         <div class="name">
                             <p class="name-1">Samuel Green</p>
                             <p class="name-2">Available to Walk</p>
                         </div>
                         <div class="more-back">
-                            <img src="../images/more.png" alt="more" class="more">
+                            <img src="images/more.png" alt="more" class="more">
                         </div> 
                     </div>
                     <div class="messanger">
@@ -38,9 +38,9 @@
                         </div>
                         <div class="messanger-2">
                             <div class="photos">
-                                <img src="../images/dog-image-1.jpg" alt="dog">
-                                <img src="../images/dog-image-2.jpg" alt="dog">
-                                <img src="../images/dog-image-3.jpg" alt="gog">
+                                <img src="images/dog-image-1.jpg" alt="dog">
+                                <img src="images/dog-image-2.jpg" alt="dog">
+                                <img src="images/dog-image-3.jpg" alt="gog">
                             </div>
                             <div class="messanger-2-1 mes-2">
                                 <p>Here are a few pictures. She’s a happy girl!</p>
@@ -72,7 +72,7 @@
                     <div class="new-message">
                         <p>Type a message…</p>
                         <div class="arrow-back">
-                            <img class="arrow" src="../images/arrow.png" alt="arrow">
+                            <img class="arrow" src="images/arrow.png" alt="arrow">
                         </div>
                     </div>
                 </div>
